# natural-language-2-sql

./: .gitignore  README.md  db_schema.json  main.py  pyproject.toml  test.py
src/: agents.py  config.py  db.py  tools.py
src/agents/: nl2sql_agent.py
src/prompts/: job_oportunity_match.py
src/services/: create_safe_schema.py  export_db_catalog.py
